--- a/.github/workflows/label-issues-real.yml
+++ b/.github/workflows/label-issues-real.yml
@@ -5,9 +5,12 @@ on:
       - opened
 jobs:
   assign-label:
+    permissions:
+      issues: write
     runs-on: ubuntu-latest
     steps:
       - name: Assign label
+
         if: contains(github.event.issue.title, 'bug')
         run: |
           curl -X POST \
